--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,150 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/imageView"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="0dp"
-        android:layout_height="360dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="168dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/pic1" />
+        app:layout_constraintBottom_toBottomOf="parent"
 
-    <TextView
-        android:id="@+id/view_2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@color/purple_200"
-        android:gravity="center"
-        android:text="2"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/view_5"
-        app:layout_constraintEnd_toStartOf="@+id/view_3"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/view_1"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
-
-    <TextView
-        android:id="@+id/view_3"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="16dp"
-        android:background="@color/design_default_color_primary"
-        android:gravity="center"
-        android:text="3"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/view_6"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/view_2"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
-
-    <TextView
-        android:id="@+id/view_7"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@color/teal_700"
-        android:gravity="center"
-        android:text="7"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toStartOf="@+id/view_8"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/view_4" />
-
-    <TextView
-        android:id="@+id/view_6"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@color/design_default_color_secondary"
-        android:gravity="center"
-        android:text="6"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/view_9"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/view_5"
-        app:layout_constraintTop_toBottomOf="@+id/view_3" />
-
-    <TextView
-        android:id="@+id/view_5"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@color/white"
-        android:gravity="center"
-        android:text="5"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/view_8"
-        app:layout_constraintEnd_toStartOf="@+id/view_6"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/view_4"
-        app:layout_constraintTop_toBottomOf="@+id/view_2" />
-
-    <TextView
-        android:id="@+id/view_4"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@color/teal_200"
-        android:gravity="center"
-        android:text="4"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/view_7"
-        app:layout_constraintEnd_toStartOf="@+id/view_5"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/view_1" />
-
-    <TextView
-        android:id="@+id/view_8"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@color/purple_500"
-        android:gravity="center"
-        android:text="8"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toStartOf="@+id/view_9"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/view_7"
-        app:layout_constraintTop_toBottomOf="@+id/view_5" />
-
-    <TextView
-        android:id="@+id/view_9"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@color/purple_200"
-        android:gravity="center"
-        android:text="9"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="@+id/view_6"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/view_8"
-        app:layout_constraintTop_toBottomOf="@+id/view_6" />
-
-    <TextView
-        android:id="@+id/view_1"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:background="@android:color/darker_gray"
-        android:gravity="center"
-        android:text="1"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/view_4"
-        app:layout_constraintEnd_toStartOf="@+id/view_2"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
-
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/navigation" />
 </androidx.constraintlayout.widget.ConstraintLayout>
