--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="orange_300">#FF8A65</color>
+    <color name="light_blue_custom">#65DBFF</color>
+    <color name="orange_dark">#C75B39</color>
+    <color name="light_blue_dark">#1BA9CC</color>
+    <color name="orange_light">#FFBB93</color>
 </resources>
