--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -24,13 +24,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline3"
-        app:srcCompat="@drawable/tom_jerry" />
+        app:srcCompat="@drawable/tom_jerry_img" />
 
     <Button
         android:id="@+id/answer_1"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="Button"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -41,7 +41,7 @@
     <Button
         android:id="@+id/answer_2"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:layout_marginStart="8dp"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +52,7 @@
     <Button
         android:id="@+id/answer_3"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="Button"
@@ -63,7 +63,7 @@
     <Button
         android:id="@+id/answer_4"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Button"
