Small layout buttons fixed

--- a/app/src/main/res/layout-long/fragment_game.xml
+++ b/app/src/main/res/layout-long/fragment_game.xml
@@ -7,10 +7,10 @@
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/points_view"
+        android:id="@+id/score_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="@string/your_score_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
