Some UI changes done

--- a/app/src/main/res/layout-long/fragment_game.xml
+++ b/app/src/main/res/layout-long/fragment_game.xml
@@ -31,7 +31,8 @@
         android:layout_height="60dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
-        android:text="Button"
+        android:textAllCaps="false"
+        android:textSize="16sp"
         app:layout_constraintDimensionRatio=""
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="1.0"
@@ -43,7 +44,8 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginStart="8dp"
-        android:text="Button"
+        android:textAllCaps="false"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.785"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -55,7 +57,8 @@
         android:layout_height="60dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Button"
+        android:textAllCaps="false"
+        android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/answer_1" />
@@ -66,7 +69,8 @@
         android:layout_height="60dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Button"
+        android:textSize="16sp"
+        android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -102,18 +106,18 @@
         android:id="@+id/shard1"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#E83535"
+        android:background="@color/shard_pink"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toStartOf="@+id/shard2"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/image_view"
-        app:layout_constraintTop_toTopOf="@+id/guideline3" />
+        app:layout_constraintTop_toTopOf="@+id/guideline3"/>
 
     <TextView
         android:id="@+id/shard2"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#F88989"
+        android:background="@color/shard_blue"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline6"
@@ -123,7 +127,7 @@
         android:id="@+id/shard3"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#76E3C0"
+        android:background="@color/shard_green"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -133,7 +137,7 @@
         android:id="@+id/shard4"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#54DD4B"
+        android:background="@color/shard_yellow"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="@+id/image_view"
         app:layout_constraintStart_toStartOf="@+id/guideline7"
@@ -143,7 +147,7 @@
         android:id="@+id/shard5"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#476CC6"
+        android:background="@color/shard_yellow"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
         app:layout_constraintStart_toStartOf="@+id/image_view"
@@ -153,7 +157,7 @@
         android:id="@+id/shard6"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#D977EA"
+        android:background="@color/shard_pink"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toEndOf="@+id/shard5"
@@ -163,7 +167,7 @@
         android:id="@+id/shard7"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#03A9F4"
+        android:background="@color/shard_blue"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -173,7 +177,7 @@
         android:id="@+id/shard8"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#FFEF61"
+        android:background="@color/shard_green"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="@+id/image_view"
         app:layout_constraintStart_toStartOf="@+id/guideline7"
@@ -197,7 +201,7 @@
         android:id="@+id/shard9"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#F66233"
+        android:background="@color/shard_green"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
         app:layout_constraintHorizontal_bias="1.0"
@@ -208,7 +212,7 @@
         android:id="@+id/shard10"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#009688"
+        android:background="@color/shard_yellow"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline6"
@@ -218,7 +222,7 @@
         android:id="@+id/shard11"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#E91E63"
+        android:background="@color/shard_pink"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -228,7 +232,7 @@
         android:id="@+id/shard12"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#0B20D8"
+        android:background="@color/shard_blue"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="@+id/shard8"
         app:layout_constraintStart_toStartOf="@+id/guideline7"
@@ -236,10 +240,9 @@
 
     <TextView
         android:id="@+id/shard13"
-
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#8F8F8F"
+        android:background="@color/shard_blue"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
         app:layout_constraintStart_toStartOf="@+id/image_view"
@@ -249,7 +252,7 @@
         android:id="@+id/shard14"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#CDDC39"
+        android:background="@color/shard_green"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline6"
@@ -259,7 +262,7 @@
         android:id="@+id/shard15"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#933535"
+        android:background="@color/shard_yellow"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -269,7 +272,7 @@
         android:id="@+id/shard16"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#FFD89F"
+        android:background="@color/shard_pink"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="@+id/image_view"
         app:layout_constraintStart_toStartOf="@+id/guideline7"
