--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -17,7 +17,8 @@
         android:label="GameFragment" >
         <action
             android:id="@+id/action_gameFragment_to_finishFragment"
-            app:destination="@id/finishFragment" />
+            app:destination="@id/finishFragment"
+            app:popUpToInclusive="false" />
     </fragment>
     <fragment
         android:id="@+id/finishFragment"
