Back arrow fixed

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -18,6 +18,7 @@
         <action
             android:id="@+id/action_gameFragment_to_finishFragment"
             app:destination="@id/finishFragment"
+            app:popUpTo="@id/titleFragment"
             app:popUpToInclusive="false" />
     </fragment>
     <fragment
