Added some UI changes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,8 @@
     <color name="orange_dark">#C75B39</color>
     <color name="light_blue_dark">#1BA9CC</color>
     <color name="orange_light">#FFBB93</color>
+    <color name="wrong_answer">#E53935</color>
+    <color name="correct_answer">#00C853</color>
 
     <color name="shard_green">#B4F8C8</color>
     <color name="shard_pink">#FFAEBC</color>
