--- a/app/src/main/res/layout/fragment_finish.xml
+++ b/app/src/main/res/layout/fragment_finish.xml
@@ -44,7 +44,7 @@
         app:layout_constraintGuide_percent="0.23" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/finish_image"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
@@ -56,6 +56,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/play_again_button"
-        app:srcCompat="@drawable/score_new_high" />
+        app:srcCompat="@drawable/score_new_high"
+        android:contentDescription="@string/finish"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
